PREPPED AND INSTALLED HANDLEBARS

--- a/web-server/views/index.hbs
+++ b/web-server/views/index.hbs
@@ -8,9 +8,10 @@
 </head>
 
 <body>
-    <h1>FROM A STATIC FILE</h1> 
     
-    <h1>HOME PAGE</h1>
+    <h1>WEATHER</h1> 
+    
+    
 </body>
 
 </html>
