created handlebars files for help, index and about. used express to load those pages via render method on response parameter within app.get() in app.js

--- a/web-server/views/about.hbs
+++ b/web-server/views/about.hbs
@@ -7,11 +7,11 @@
 </head>
 
 <body>
-    <h1>FROM A STATIC FILE</h1> 
+    <h1>{{title}}</h1>
     <img src="/img/tracy-morgan-stubborn.jpg" alt="">
-    <br>
+    <br><p>Created By {{name}}</p>
     <img src="/img/tracy-morgan-stubborn2.jpg" alt="">
-    <h1>ABOUT PAGE</h1>
+    
 </body>
 
 </html>
