--- a/web-server/views/help.hbs
+++ b/web-server/views/help.hbs
@@ -4,11 +4,12 @@
 
 <head>
     <link rel="stylesheet" href="./css/styles.css">
+  
 </head>
 
 <body>
-    <h1>FROM A STATIC FILE</h1> 
-    <h1>HELP PAGE</h1>
+    <h1>{{title}}</h1>
+    <p>{{helpMessage}}</p>
 </body>
 
 </html>
