--- a/web-server/views/index.hbs
+++ b/web-server/views/index.hbs
@@ -9,7 +9,8 @@
 
 <body>
     
-    <h1>WEATHER</h1> 
+    <h1>{{title}}</h1>
+    <p style="font-family: fantasy;">Created By {{name}}</p> 
     
     
 </body>
