--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -4,12 +4,13 @@
 
 <head>
     <link rel="stylesheet" href="./css/styles.css">
-  
 </head>
 
 <body>
-    <h1>{{title}}</h1>
-    <p>{{helpMessage}}</p>
+    {{>header}}
+    <img src="/img/tracy-morgan-stubborn2.jpg" alt="">
+    {{>footer}}
+  
 </body>
 
 </html>
