--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -4,13 +4,14 @@
 
 <head>
     <link rel="stylesheet" href="./css/styles.css">
-    <script src="/js/app.js"></script>
+    
 </head>
 
 <body>
     
-    <h1>{{title}}</h1>
-    <p style="font-family: fantasy;">Created By {{name}}</p> 
+    {{>header}}
+
+    {{>footer}} 
     
     
 </body>
