set up a 404 template and applied it to both types of not found pages

--- a/web-server/templates/views/404.hbs
+++ b/web-server/templates/views/404.hbs
@@ -8,10 +8,9 @@
 </head>
 
 <body>
-    
     {{>header}}
-    <p>{{helpMessage}}</p>
-    {{>footer}}
+    <p>{{errorMessage}}</p>
+    {{>footer}}    
     
 </body>
 
