added an icon png file, made changes to css

--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -3,12 +3,19 @@
 <html>
 
 <head>
+    <title>About</title>
+    <link rel="icon" href="/img/multicloud.png">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
-    {{>header}}
-    <img src="/img/tracy-morgan-stubborn2.jpg" alt="">
+    <div class="main-content">
+        {{>header}}
+    <img class="portrait" src="/img/tracy-morgan-stubborn2.jpg" alt="">
+    </div>    
+    
+    
+    
     {{>footer}}
   
 </body>
