--- a/web-server/templates/views/help.hbs
+++ b/web-server/templates/views/help.hbs
@@ -3,14 +3,18 @@
 <html>
 
 <head>
+    <title>help</title>
+    <link rel="icon" href="/img/multicloud.png">
     <link rel="stylesheet" href="./css/styles.css">
   
 </head>
 
 <body>
-    
-    {{>header}}
+    <div class="main-content">
+        {{>header}}
     <p>{{helpMessage}}</p>
+    </div>
+    
     {{>footer}}
     
 </body>
