--- a/web-server/templates/views/404.hbs
+++ b/web-server/templates/views/404.hbs
@@ -3,13 +3,18 @@
 <html>
 
 <head>
+    <title>404</title>
+    <link rel="icon" href="/img/multicloud.png">
     <link rel="stylesheet" href="./css/styles.css">
   
 </head>
 
 <body>
-    {{>header}}
+    <div class="main-content">
+ {{>header}}
     <p>{{errorMessage}}</p>
+    </div>
+   
     {{>footer}}    
     
 </body>
