TESTED DEFAULT PARAMETERS AND BEGIN TO TOY AROUND WITH FETCH API

--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -6,7 +6,7 @@
     <title>Weather</title>
     <link rel="icon" href="/img/multicloud.png">
     <link rel="stylesheet" href="./css/styles.css">
-    
+    <script src="/js/app.js"></script> 
 </head>
 
 <body>
@@ -18,7 +18,7 @@
 
     {{>footer}} 
     
-    
+   
 </body>
 
 </html>
