--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -6,19 +6,23 @@
     <title>Weather</title>
     <link rel="icon" href="/img/multicloud.png">
     <link rel="stylesheet" href="./css/styles.css">
-    <script src="/js/app.js"></script> 
+     
 </head>
 
 <body>
     <div class="main-content">
        {{>header}} 
-       <p>use this site to get weather</p>
+       <p>Use this site to get weather</p>
+       <form>
+           <input placeholder="Location">
+           <button>Search</button>
+       </form>
     </div>
     
 
     {{>footer}} 
     
-   
+   <script src="/js/app.js"></script>
 </body>
 
 </html>
