--- a/web-server/public/css/styles.css
+++ b/web-server/public/css/styles.css
@@ -15,14 +15,14 @@ body {
 }
 
  p {
-color: #3e35b9;
+color: #123456;
 border-top: 1px solid #eeeeee;  
 margin-top: 16px;
 padding: 16px; 
 }
 
 header {
-    margin-top: 16px;
+    margin-top: 20px;
     margin-bottom: 48px;
 }
 
@@ -39,4 +39,17 @@ h1 {
 
 .portrait {
     width: 250px
+}
+
+input {
+    border: 1px solid #cccccc;
+    padding: 8px
+}
+
+button {
+    cursor: pointer;
+    border: 1px solid #888888;
+    background: #888888;
+    color: white;
+    padding: 8px;
 }
