new versions of all the relevant files. worked on this outside of the repository. copy/pasting new into old

--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -11,7 +11,9 @@
 <body>
     <div class="main-content">
         {{>header}}
+            <p>This app was created by darique warren using data from mapcode.com and weatherstack.com</p>
     <img class="portrait" src="/img/tracy-morgan-stubborn2.jpg" alt="">
+
     </div>    
     
     
