--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -12,7 +12,7 @@
 <body>
     <div class="main-content">
        {{>header}} 
-       <p>Use this site to get weather</p>
+       <p>Enter a location name or zipcode to recieve your current weather forecast</p>
        <form>
            <input placeholder="Location">
            <button>Search</button>
