ran a bunch of failed tests trying to manipulate the dom from a js file

--- a/task-manager/views/pages/login.hbs
+++ b/task-manager/views/pages/login.hbs
@@ -16,7 +16,7 @@
 <body>
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-0">
     <div class="container">
-      <a href="index.html" class="navbar-brand">Blogen</a>
+      <a href="index.hbs" class="navbar-brand">Blogen</a>
     </div>
   </nav>
 
@@ -51,7 +51,7 @@
               <h4>Account Login</h4>
             </div>
             <div class="card-body">
-              <form action="index.html">
+              <form action="index.hbs">
                 <div class="form-group">
                   <label for="email">Email</label>
                   <input type="text" class="form-control">
