--- a/task-manager/views/pages/index.hbs
+++ b/task-manager/views/pages/index.hbs
@@ -9,30 +9,31 @@
     crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
-  <link rel="stylesheet" href="css/style.css">
+  
   <title>Bootstrap Theme</title>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-0">
     <div class="container">
-      <a href="index.html" class="navbar-brand">Blogen</a>
+      <a href="index.hbs" class="navbar-brand">Blogen</a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav">
           <li class="nav-item px-2">
-            <a href="index.html" class="nav-link active">Dashboard</a>
+            <a href="index.hbs" class="nav-link active">Dashboard</a>
+            
           </li>
           <li class="nav-item px-2">
-            <a href="posts.html" class="nav-link">Posts</a>
+            <a href="posts.hbs" class="nav-link">Posts</a>
           </li>
           <li class="nav-item px-2">
-            <a href="categories.html" class="nav-link">Categories</a>
+            <a href="categories.hbs" class="nav-link">Categories</a>
           </li>
           <li class="nav-item px-2">
-            <a href="users.html" class="nav-link">Users</a>
+            <a href="users.hbs" class="nav-link">Users</a>
           </li>
         </ul>
 
@@ -42,16 +43,16 @@
               <i class="fas fa-user"></i> Welcome Brad
             </a>
             <div class="dropdown-menu">
-              <a href="profile.html" class="dropdown-item">
+              <a href="profile.hbs" class="dropdown-item">
                 <i class="fas fa-user-circle"></i> Profile
               </a>
-              <a href="settings.html" class="dropdown-item">
+              <a href="settings.hbs" class="dropdown-item">
                 <i class="fas fa-cog"></i> Settings
               </a>
             </div>
           </li>
           <li class="nav-item">
-            <a href="login.html" class="nav-link">
+            <a href="login.hbs" class="nav-link">
               <i class="fas fa-user-times"></i> Logout
             </a>
           </li>
@@ -121,7 +122,7 @@
                   <td>Web Development</td>
                   <td>May 10 2018</td>
                   <td>
-                    <a href="details.html" class="btn btn-secondary">
+                    <a href="details.hbs" class="btn btn-secondary">
                       <i class="fas fa-angle-double-right"></i> Details
                     </a>
                   </td>
@@ -132,7 +133,7 @@
                   <td>Tech Gadgets</td>
                   <td>May 11 2018</td>
                   <td>
-                    <a href="details.html" class="btn btn-secondary">
+                    <a href="details.hbs" class="btn btn-secondary">
                       <i class="fas fa-angle-double-right"></i> Details
                     </a>
                   </td>
@@ -143,7 +144,7 @@
                   <td>Web Development</td>
                   <td>May 13 2018</td>
                   <td>
-                    <a href="details.html" class="btn btn-secondary">
+                    <a href="details.hbs" class="btn btn-secondary">
                       <i class="fas fa-angle-double-right"></i> Details
                     </a>
                   </td>
@@ -154,7 +155,7 @@
                   <td>Business</td>
                   <td>May 15 2018</td>
                   <td>
-                    <a href="details.html" class="btn btn-secondary">
+                    <a href="details.hbs" class="btn btn-secondary">
                       <i class="fas fa-angle-double-right"></i> Details
                     </a>
                   </td>
@@ -165,7 +166,7 @@
                   <td>Web Development</td>
                   <td>May 17 2018</td>
                   <td>
-                    <a href="details.html" class="btn btn-secondary">
+                    <a href="details.hbs" class="btn btn-secondary">
                       <i class="fas fa-angle-double-right"></i> Details
                     </a>
                   </td>
@@ -176,7 +177,7 @@
                   <td>Health & Wellness</td>
                   <td>May 20 2018</td>
                   <td>
-                    <a href="details.html" class="btn btn-secondary">
+                    <a href="details.hbs" class="btn btn-secondary">
                       <i class="fas fa-angle-double-right"></i> Details
                     </a>
                   </td>
@@ -192,7 +193,7 @@
               <h4 class="display-4">
                 <i class="fas fa-pencil-alt"></i> 6
               </h4>
-              <a href="posts.html" class="btn btn-outline-light btn-sm">View</a>
+              <a href="posts.hbs" class="btn btn-outline-light btn-sm">View</a>
             </div>
           </div>
 
@@ -202,7 +203,7 @@
               <h4 class="display-4">
                 <i class="fas fa-folder"></i> 4
               </h4>
-              <a href="categories.html" class="btn btn-outline-light btn-sm">View</a>
+              <a href="categories.hbs" class="btn btn-outline-light btn-sm">View</a>
             </div>
           </div>
 
@@ -212,7 +213,7 @@
               <h4 class="display-4">
                 <i class="fas fa-users"></i> 4
               </h4>
-              <a href="users.html" class="btn btn-outline-light btn-sm">View</a>
+              <a href="users.hbs" class="btn btn-outline-light btn-sm">View</a>
             </div>
           </div>
         </div>
@@ -278,7 +279,7 @@
           </form>
         </div>
         <div class="modal-footer">
-          <button class="btn btn-primary" data-dismiss="modal">Save Changes</button>
+          <button class="btn btn-primary" data-dismiss="modal" >Save Changes</button>
         </div>
       </div>
     </div>
@@ -340,7 +341,7 @@
           </form>
         </div>
         <div class="modal-footer">
-          <button class="btn btn-warning" data-dismiss="modal">Save Changes</button>
+          <button class="btn btn-warning" data-dismiss="modal" name="saveEverythingButton">Save geverythin</button>
         </div>
       </div>
     </div>
@@ -361,6 +362,7 @@
 
     CKEDITOR.replace('editor1');
   </script>
+  <script src="/src/js/test.js"></script>
 </body>
 
 </html>
