--- a/task-manager/views/pages/posts.hbs
+++ b/task-manager/views/pages/posts.hbs
@@ -16,23 +16,23 @@
 <body>
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-0">
     <div class="container">
-      <a href="index.html" class="navbar-brand">Blogen</a>
+      <a href="index.hbs" class="navbar-brand">Blogen</a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav">
           <li class="nav-item px-2">
-            <a href="index.html" class="nav-link">Dashboard</a>
+            <a href="index.hbs" class="nav-link">Dashboard</a>
           </li>
           <li class="nav-item px-2">
-            <a href="posts.html" class="nav-link active">Posts</a>
+            <a href="posts.hbs" class="nav-link active">Posts</a>
           </li>
           <li class="nav-item px-2">
-            <a href="categories.html" class="nav-link">Categories</a>
+            <a href="categories.hbs" class="nav-link">Categories</a>
           </li>
           <li class="nav-item px-2">
-            <a href="users.html" class="nav-link">Users</a>
+            <a href="users.hbs" class="nav-link">Users</a>
           </li>
         </ul>
 
@@ -42,16 +42,16 @@
               <i class="fas fa-user"></i> Welcome Brad
             </a>
             <div class="dropdown-menu">
-              <a href="profile.html" class="dropdown-item">
+              <a href="profile.hbs" class="dropdown-item">
                 <i class="fas fa-user-circle"></i> Profile
               </a>
-              <a href="settings.html" class="dropdown-item">
+              <a href="settings.hbs" class="dropdown-item">
                 <i class="fas fa-cog"></i> Settings
               </a>
             </div>
           </li>
           <li class="nav-item">
-            <a href="login.html" class="nav-link">
+            <a href="login.hbs" class="nav-link">
               <i class="fas fa-user-times"></i> Logout
             </a>
           </li>
@@ -114,7 +114,7 @@
                   <td>Web Development</td>
                   <td>May 10 2018</td>
                   <td>
-                    <a href="details.html" class="btn btn-secondary">
+                    <a href="details.hbs" class="btn btn-secondary">
                       <i class="fas fa-angle-double-right"></i> Details
                     </a>
                   </td>
@@ -125,7 +125,7 @@
                   <td>Tech Gadgets</td>
                   <td>May 11 2018</td>
                   <td>
-                    <a href="details.html" class="btn btn-secondary">
+                    <a href="details.hbs" class="btn btn-secondary">
                       <i class="fas fa-angle-double-right"></i> Details
                     </a>
                   </td>
@@ -136,7 +136,7 @@
                   <td>Web Development</td>
                   <td>May 13 2018</td>
                   <td>
-                    <a href="details.html" class="btn btn-secondary">
+                    <a href="details.hbs" class="btn btn-secondary">
                       <i class="fas fa-angle-double-right"></i> Details
                     </a>
                   </td>
@@ -147,7 +147,7 @@
                   <td>Business</td>
                   <td>May 15 2018</td>
                   <td>
-                    <a href="details.html" class="btn btn-secondary">
+                    <a href="details.hbs" class="btn btn-secondary">
                       <i class="fas fa-angle-double-right"></i> Details
                     </a>
                   </td>
@@ -158,7 +158,7 @@
                   <td>Web Development</td>
                   <td>May 17 2018</td>
                   <td>
-                    <a href="details.html" class="btn btn-secondary">
+                    <a href="details.hbs" class="btn btn-secondary">
                       <i class="fas fa-angle-double-right"></i> Details
                     </a>
                   </td>
@@ -169,7 +169,7 @@
                   <td>Health & Wellness</td>
                   <td>May 20 2018</td>
                   <td>
-                    <a href="details.html" class="btn btn-secondary">
+                    <a href="details.hbs" class="btn btn-secondary">
                       <i class="fas fa-angle-double-right"></i> Details
                     </a>
                   </td>
