--- a/task-manager/views/pages/profile.hbs
+++ b/task-manager/views/pages/profile.hbs
@@ -16,23 +16,23 @@
 <body>
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-0">
     <div class="container">
-      <a href="index.html" class="navbar-brand">Blogen</a>
+      <a href="index.hbs" class="navbar-brand">Blogen</a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav">
           <li class="nav-item px-2">
-            <a href="index.html" class="nav-link">Dashboard</a>
+            <a href="index.hbs" class="nav-link">Dashboard</a>
           </li>
           <li class="nav-item px-2">
-            <a href="posts.html" class="nav-link">Posts</a>
+            <a href="posts.hbs" class="nav-link">Posts</a>
           </li>
           <li class="nav-item px-2">
-            <a href="categories.html" class="nav-link">Categories</a>
+            <a href="categories.hbs" class="nav-link">Categories</a>
           </li>
           <li class="nav-item px-2">
-            <a href="users.html" class="nav-link">Users</a>
+            <a href="users.hbs" class="nav-link">Users</a>
           </li>
         </ul>
 
@@ -42,16 +42,16 @@
               <i class="fas fa-user"></i> Welcome Brad
             </a>
             <div class="dropdown-menu">
-              <a href="profile.html" class="dropdown-item">
+              <a href="profile.hbs" class="dropdown-item">
                 <i class="fas fa-user-circle"></i> Profile
               </a>
-              <a href="settings.html" class="dropdown-item">
+              <a href="settings.hbs" class="dropdown-item">
                 <i class="fas fa-cog"></i> Settings
               </a>
             </div>
           </li>
           <li class="nav-item">
-            <a href="login.html" class="nav-link">
+            <a href="login.hbs" class="nav-link">
               <i class="fas fa-user-times"></i> Logout
             </a>
           </li>
@@ -77,7 +77,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3">
-          <a href="index.html" class="btn btn-light btn-block">
+          <a href="index.hbs" class="btn btn-light btn-block">
             <i class="fas fa-arrow-left"></i> Back To Dashboard
           </a>
         </div>
